fix for tests before deploy again