@@ -136,6 +136,7 @@
                 <version>3.0.0-M5</version>
                 <configuration>
                     <argLine>
+                        -Djava.security.manager=allow
                         --add-exports=java.base/sun.nio.ch=ALL-UNNAMED
                         --add-opens=java.base/java.lang=ALL-UNNAMED
                         --add-opens=java.base/java.lang.invoke=ALL-UNNAMED
